make the window appear on macos
rabase yielding macos build fixed after upstream added a button.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,21 @@
 cmake_minimum_required(VERSION 3.30)
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -O0 -g -ggdb3 -DDEBUG -Wall -Wextra -Wshadow -Wpedantic -Wno-variadic-macros -Wno-multistatement-macros -Wstringop-overflow -Werror=return-type") 
+# set(
+#     CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -O0 -g
+#     -ggdb3 -DDEBUG -Wall -Wextra -Wshadow -Wpedantic
+#     -Wno-variadic-macros -Wno-multistatement-macros
+#     -Wstringop-overflow -Werror=return-type"
+# )
 
 project(particle_sim)
 
 include_directories(fluidsim/)
 include_directories(fluidsim/extern/imgui)
 include_directories(fluidsim/extern/implot)
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GLFW REQUIRED IMPORTED_TARGET glfw3)
 
 add_executable(particle_sim
     fluidsim/main.cpp
@@ -25,7 +33,15 @@ add_executable(particle_sim
     fluidsim/extern/implot/implot_items.cpp
 )
 
-target_link_libraries(particle_sim
-    glfw
-    GL
-)
+# Apply compile options to the target (instead of global flags)
+target_compile_features(particle_sim PRIVATE cxx_std_20)
+target_compile_options(particle_sim PRIVATE -O0 -g -ggdb3 -DDEBUG -Wall -Wextra -Wshadow -Wpedantic -Wno-variadic-macros -Werror=return-type)
+
+# Using imported target from pkg-config; no manual include/link directories needed
+target_compile_definitions(particle_sim PRIVATE GL_SILENCE_DEPRECATION)
+
+if(APPLE)
+    target_link_libraries(particle_sim PkgConfig::GLFW "-framework OpenGL" "-framework Cocoa" "-framework IOKit" "-framework CoreVideo")
+else()
+    target_link_libraries(particle_sim PkgConfig::GLFW GL)
+endif()
